adding exceptions global handler